--- a/index.html
+++ b/index.html
@@ -5,197 +5,215 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>RotaractMora Manusath Handa
-			<img src="./images/logosrota/New folder (4)/white logo.png"/>
-		</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<a class="logo">
-					<img src="./images/logosrota/New folder (4)/Colour logo.png" width="9%"/>
-				</a>
-				<nav>
-					<a href="#menu">Menu</a>
-				</nav>
+<head>
+	<title>RotaractMora Manusath Handa
+		<img src="./images/logosrota/New folder (4)/white logo.png" />
+	</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+
+</head>
+
+<body class="is-preload">
+	<!-- Header -->
+	<header id="header">
+		<div>
+			<a href="http://rotaractmora.org">
+				<img src="./images/logosrota/New folder (4)/white logo.png" width="200px"/>
+			</a>
+			<a href="./index.html">
+				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" width="200px" style="padding-top: 5%;"/>
+			</a>
+		</div>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="elements.html">Elements</a></li>
+			<li><a href="generic.html">Generic</a></li>
+		</ul>
+	</nav>
+
+	<!-- Banner -->
+	<section id="banner">
+		<div class="inner">
+			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" />
+
+		</div>
+
+		<!--<video autoplay loop muted playsinline src="images/banner.mp4"></video>-->
+	</section>
+
+	<!-- Highlights -->
+	<section class="wrapper">
+		<div class="inner">
+			<header class="special">
+				<h2>Select a category</h2>
+				<p>Click on a button below to view, listen & download audio materials.</p>
 			</header>
-
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
-				</ul>
-			</nav>
-
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<h1>Manusath Handa</h1>
-					<p>An Educational Audio Library for the Visually Impaired<br />
-				</div>
-				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
-			</section>
-
-		<!-- Highlights -->
-			<section class="wrapper">
-				<div class="inner">
-					<header class="special">
-						<h2>Select a category</h2>
-						<p>Click on a button below to view, listen & download audio materials.</p>
-					</header>
-					<div class="highlights">
-						<!--Selectable categories-->
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='magazines.html';">
-								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Magazines</h3>
-								</header>
-								<p>Listen to an ever-growing collection of the most popular children's magazines</p>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
-								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Past Papers</h3>
-								</header>
-								<p>Listen to the past papers of G.C.E. Ordinary Level exam</p>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
-								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Other reads</h3>
-								</header>
-								<p>Listen to many miscellaneous reading materials</p>
-							</div>
-						</section>
+			<div class="highlights">
+				<!--Selectable categories-->
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='magazines.html';">
+						<header>
+							<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+							<h3>Magazines</h3>
+						</header>
+						<p>Listen to an ever-growing collection of the most popular children's magazines</p>
 					</div>
-				</div>
-			</section>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
+						<header>
+							<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+							<h3>Past Papers</h3>
+						</header>
+						<p>Listen to the past papers of G.C.E. Ordinary Level exam</p>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+						<header>
+							<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+							<h3>Other reads</h3>
+						</header>
+						<p>Listen to many miscellaneous reading materials</p>
+					</div>
+				</section>
+			</div>
+		</div>
+	</section>
 
-		<!-- CTA -->
-			<section id="cta" class="wrapper">
-				<div class="inner">
-					<h2>"Manusath Handa - Voice of Humanity"</h2>
-					<p>This project intends to provide massive support for the visually impaired students in Sri Lanka by offering them audiobooks that 
-					cover the subject matter which they learn using the Braille technique. It has been discovered that audiobooks are far more effective, comfortable 
-						and can cover the content in a commendable manner while helping the students to hear and learn beyond what they have imagined.</p>
-				</div>
-			</section>
+	<!-- CTA -->
+	<section id="cta" class="wrapper">
+		<div class="inner">
+			<h2>"Manusath Handa - Voice of Humanity"</h2>
+			<p>This project intends to provide massive support for the visually impaired students in Sri Lanka by
+				offering them audiobooks that
+				cover the subject matter which they learn using the Braille technique. It has been discovered that
+				audiobooks are far more effective, comfortable
+				and can cover the content in a commendable manner while helping the students to hear and learn beyond
+				what they have imagined.</p>
+		</div>
+	</section>
 
-		<!-- Testimonials -->
-			<section class="wrapper">
-				<div class="inner">
-					<!--<header class="special">
+	<!-- Testimonials -->
+	<section class="wrapper">
+		<div class="inner">
+			<!--<header class="special">
 						<h2>Faucibus consequat lorem</h2>
 						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
 					</header>-->
-					<div class="testimonials">
-						<section>
-							<div class="content">
-								<blockquote>
-									<p>"The only thing worse than being blind is having sight but no vision."</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images\pic04.jpeg" alt="" />
-									</div>
-									<p class="credit">- <strong>Helen Keller</strong><br> <span>American author</span></p>
-								</div>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<blockquote>
-									<p>"Blindness has not been for me a total misfortune; it should not be seen in a pathetic way. It should be seen as a way of life: one of the styles of living."</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images\pic05 .jpg" alt="" />
-									</div>
-									<p class="credit">- <strong>Jorge Luis Borges</strong><br> <span>Argentine writer</span></p>
-								</div>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<blockquote>
-									<p>"Disability need not be an obstacle to success."</p>
-								</blockquote>
-								<div class="author">
-									<div class="image">
-										<img src="images\pic06.jpg" alt="" />
-									</div>
-									<p class="credit">- <strong>Stephen Hawking</strong><br> <span>English theoretical physicist</span></p>
-								</div>
-							</div>
-						</section>
-					</div>
-				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
+			<div class="testimonials">
+				<section>
 					<div class="content">
-						<section>
-							<h4>About Us</h4>
-							<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora over the years has earned much recognition in the Rotaract movement,
-							bagging multiple local, as well as international awards, and doing projects with high quality,
-							sustainability and continuity.</p>
-						</section>
-						<section>
-							<h4>Reach Us</h4>
-							<ul class="alt">
-								<li>
-									<strong>Post</strong>
-									<br/>
-									Rotaract Club of University of Moratuwa,<br>
-									University of Moratuwa,<br>
-									Bandaranayake Mawatha,<br>
-									Moratuwa. <br> 10400
-								</li>
-								<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
+						<blockquote>
+							<p>"The only thing worse than being blind is having sight but no vision."</p>
+						</blockquote>
+						<div class="author">
+							<div class="image">
+								<img src="images\pic04.jpeg" alt="" />
+							</div>
+							<p class="credit">- <strong>Helen Keller</strong><br> <span>American author</span></p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<div class="content">
+						<blockquote>
+							<p>"Blindness has not been for me a total misfortune; it should not be seen in a pathetic
+								way. It should be seen as a way of life: one of the styles of living."</p>
+						</blockquote>
+						<div class="author">
+							<div class="image">
+								<img src="images\pic05 .jpg" alt="" />
+							</div>
+							<p class="credit">- <strong>Jorge Luis Borges</strong><br> <span>Argentine writer</span></p>
+						</div>
+					</div>
+				</section>
+				<section>
+					<div class="content">
+						<blockquote>
+							<p>"Disability need not be an obstacle to success."</p>
+						</blockquote>
+						<div class="author">
+							<div class="image">
+								<img src="images\pic06.jpg" alt="" />
+							</div>
+							<p class="credit">- <strong>Stephen Hawking</strong><br> <span>English theoretical
+									physicist</span></p>
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="content">
+				<section>
+					<h4>About Us</h4>
+					<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora
+						over the years has earned much recognition in the Rotaract movement,
+						bagging multiple local, as well as international awards, and doing projects with high quality,
+						sustainability and continuity.</p>
+				</section>
+				<section>
+					<h4>Reach Us</h4>
+					<ul class="alt">
+						<li>
+							<strong>Post</strong>
+							<br />
+							Rotaract Club of University of Moratuwa,<br>
+							University of Moratuwa,<br>
+							Bandaranayake Mawatha,<br>
+							Moratuwa. <br> 10400
+						</li>
+						<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
 								<li><a href="#">Felis enim feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li>-->
-							</ul>
-						</section>
-						<section>
-							<h4>Follow Us</h4>
-							<ul class="plain">
-								<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="https://www.facebook.com/rotaractmora/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="https://www.instagram.com/rotaractmora/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="copyright">
-						<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
-						&copy; RotaractMora 2020
-					</div>
-				</div>
-			</footer>
+					</ul>
+				</section>
+				<section>
+					<h4>Follow Us</h4>
+					<ul class="plain">
+						<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
+						</li>
+						<li><a href="https://www.facebook.com/rotaractmora/"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li><a href="https://www.instagram.com/rotaractmora/"><i
+									class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+						<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i
+									class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
+					</ul>
+				</section>
+			</div>
+			<div class="copyright">
+				<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
+				&copy; RotaractMora 2020
+			</div>
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
