--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	<header id="header">
 		<div>
 			<a href="http://rotaractmora.org">
-				<img src="./images/logosrota/New folder (4)/white logo.png" width="200px"/>
+				<img src="./images/logosrota/New folder (4)/white logo.png" width="15%"/>
 			</a>
 			<a href="./index.html">
-				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" width="200px" style="padding-top: 5%;"/>
+				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" width="15%" style="padding-top: 1.5%;"/>
 			</a>
 		</div>
 		<nav>
