--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	<section id="banner">
 		<div class="inner">
 			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" />
-
 		</div>
+		<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" />
 
 		<!--<video autoplay loop muted playsinline src="images/banner.mp4"></video>-->
 	</section>
