--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
 
 	<!-- Banner -->
 	<section id="banner">
+		<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"/>
 		<div class="inner">
-			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" />
+			<p>A responsive business oriented template with a video background<br />
+			designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
 		</div>
-		<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" />
-
-		<!--<video autoplay loop muted playsinline src="images/banner.mp4"></video>-->
 	</section>
 
 	<!-- Highlights -->
