--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
 <body class="is-preload">
 	<!-- Header -->
 	<header id="header">
-		<div>
+		<!--<div>
 			<a href="http://rotaractmora.org">
 				<img src="./images/logosrota/New folder (4)/white logo.png" width="15%"/>
 			</a>
 			<a href="./index.html">
 				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" width="15%" style="padding-top: 1.5%;"/>
 			</a>
-		</div>
+		</div>-->
+		<div></div>
 		<nav>
 			<a href="#menu">Menu</a>
 		</nav>
@@ -45,10 +46,9 @@
 
 	<!-- Banner -->
 	<section id="banner">
-		<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"/>
+		
 		<div class="inner">
-			<p>A responsive business oriented template with a video background<br />
-			designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" style="max-width: 100%; height: auto;"/>
 		</div>
 	</section>
 
