--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 	<header id="header">
 		<div>
 			<a href="http://rotaractmora.org">
-				<img src="./images/logosrota/New folder (4)/white logo.png" style="max-width: 12%; height: auto; padding-top: 2%;"/>
+				<img src="./images/logosrota/New folder (4)/white logo.png"
+					style="max-width: 12%; height: auto; padding-top: 2%;" />
 			</a>
 			<a href="./index.html">
-				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" style="max-width: 7%; height: auto; padding-bottom: 1.5%;"/>
+				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
+					style="max-width: 7%; height: auto; padding-bottom: 1.5%;" />
 			</a>
 		</div>
 		<div></div>
@@ -46,9 +48,10 @@
 
 	<!-- Banner -->
 	<section id="banner">
-		
+
 		<div class="inner">
-			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" style="max-width: 100%; height: auto;"/>
+			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
+				style="max-width: 100%; height: auto;" />
 		</div>
 	</section>
 
