--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 -->
 <html>
 
-<head>
-	<title>RotaractMora Manusath Handa
-		<img src="./images/logosrota/New folder (4)/white logo.png" />
-	</title>
+<head>	
+	<title>RotaractMora Manusath Handa</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" href="./images/logosrota/New folder (4)//Colour logo tab_icon.png">
+	<link rel="stylesheet" href="assets/css/main.css"/>
 
 </head>
 
@@ -67,6 +66,7 @@
 				<section>
 					<div class="content" style="cursor: pointer;" onclick="window.location='magazines.html';">
 						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%"/>
 							<h3>Magazines</h3>
 						</header>
 						<p>Listen to an ever-growing collection of the most popular children's magazines</p>
@@ -75,7 +75,7 @@
 				<section>
 					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
 						<header>
-							<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+							<img src="./images/audiobook-icon-66.png" width="50%"/>
 							<h3>Past Papers</h3>
 						</header>
 						<p>Listen to the past papers of G.C.E. Ordinary Level exam</p>
@@ -84,7 +84,7 @@
 				<section>
 					<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 						<header>
-							<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+							<img src="./images/audiobook-icon-66.png" width="50%"/>
 							<h3>Other reads</h3>
 						</header>
 						<p>Listen to many miscellaneous reading materials</p>
