--- a/past_papers.html
+++ b/past_papers.html
@@ -4,25 +4,35 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
-	<head>
-		<title>RotaractMora Manusath Handa</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<head>	
+	<title>RotaractMora Manusath Handa</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="icon" href="./images/logosrota/New folder (4)//Colour logo tab_icon.png">
+	<link rel="stylesheet" href="assets/css/main.css"/>
 
-		<!-- Header -->
-			<header id="header">
-				<a class="logo" href="index.html">Manusath Handa</a>
-				<nav>
-					<a href="#menu">Menu</a>
-				</nav>
-			</header>
+</head>
 
+<body class="is-preload">
+	<!-- Header -->
+	<header id="header">
+		<div>
+			<a href="http://rotaractmora.org">
+				<img src="./images/logosrota/New folder (4)/white logo.png"
+					style="max-width: 12%; height: auto; padding-top: 2%;" />
+			</a>
+			<a href="./index.html">
+				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
+					style="max-width: 7%; height: auto; padding-bottom: 1.5%;" />
+			</a>
+		</div>
+		<div></div>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
@@ -43,7 +53,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_agri.html'">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Agriculture</h3>
 								</header>
 							</div>
@@ -51,7 +61,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_english.html'">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>English</h3>
 								</header>
 							</div>
@@ -59,7 +69,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_history.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>History</h3>
 								</header>
 							</div>
@@ -67,7 +77,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_buddhism.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Buddhism</h3>
 								</header>
 							</div>
@@ -75,7 +85,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_civics.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Civics</h3>
 								</header>
 							</div>
@@ -83,7 +93,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_christianity.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Christianity</h3>
 								</header>
 							</div>
@@ -91,7 +101,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_homescience.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Home Science</h3>
 								</header>
 							</div>
@@ -99,7 +109,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_science.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Science</h3>
 								</header>
 							</div>
@@ -107,7 +117,7 @@
 						<section>
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_sinhala.html';">
 								<header>
-									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<img src="./images/audiobook-icon-66.png" width="50%"/>
 									<h3>Sinhala</h3>
 								</header>
 							</div>
