--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 	<!-- Nav -->
 	<nav id="menu">
 		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="elements.html">Elements</a></li>
-			<li><a href="generic.html">Generic</a></li>
+			<li><a href="magazines.html">Magazines</a></li>
+			<li><a href="past_papers.html">Past Papers</a></li>
 		</ul>
 	</nav>
 
@@ -49,8 +48,7 @@
 	<section id="banner">
 
 		<div class="inner">
-			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
-				style="max-width: 100%; height: auto;" />
+			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"style="max-width: 100%; height: auto;" />
 		</div>
 	</section>
 
