--- a/magazines.html
+++ b/magazines.html
@@ -4,44 +4,42 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
 
-	<head>	
-		<title>RotaractMora Manusath Handa</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="icon" href="./images/logosrota/New folder (4)//Colour logo tab_icon.png">
-		<link rel="stylesheet" href="assets/css/main.css"/>
-	
-	</head>
-	
-	<body class="is-preload">
-		<!-- Header -->
-		<header id="header">
-			<div>
-				<a href="http://rotaractmora.org">
-					<img src="./images/logosrota/New folder (4)/white logo.png"
-						style="max-width: 12%; height: auto; padding-top: 2%;" />
-				</a>
-				<a href="./index.html">
-					<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
-						style="max-width: 7%; height: auto; padding-bottom: 1.5%;" />
-				</a>
-			</div>
-			<div></div>
-			<nav>
-				<a href="#menu">Menu</a>
-			</nav>
-		</header>
+<head>
+	<title>RotaractMora Manusath Handa</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="icon" href="./images/logosrota/New folder (4)//Colour logo tab_icon.png">
+	<link rel="stylesheet" href="assets/css/main.css" />
+
+</head>
+
+<body class="is-preload">
+	<!-- Header -->
+	<header id="header">
+		<div>
+			<a href="http://rotaractmora.org">
+				<img src="./images/logosrota/New folder (4)/white logo.png"
+					style="max-width: 12%; height: auto; padding-top: 2%;" />
+			</a>
+			<a href="./index.html">
+				<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
+					style="max-width: 7%; height: auto; padding-bottom: 1.5%;" />
+			</a>
+		</div>
+		<div></div>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
 
 	<!-- Nav -->
 	<nav id="menu">
 		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="elements.html">Elements</a></li>
-			<li><a href="generic.html">Generic</a></li>
+			<li><a href="magazines.html">Magazines</a></li>
+			<li><a href="past_papers.html">Past Papers</a></li>
 		</ul>
 	</nav>
 
