--- a/past_papers.html
+++ b/past_papers.html
@@ -4,14 +4,15 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<head>	
+
+<head>
 	<title>RotaractMora Manusath Handa</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="icon" href="./images/logosrota/New folder (4)//Colour logo tab_icon.png">
-	<link rel="stylesheet" href="assets/css/main.css"/>
+	<link rel="stylesheet" href="assets/css/main.css" />
 
 </head>
 
@@ -33,149 +34,158 @@
 			<a href="#menu">Menu</a>
 		</nav>
 	</header>
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
-				</ul>
-            </nav>
-            
-		<!-- Highlights -->
-			<section class="wrapper">
-				<div class="inner">
-					<header class="special">
-						<h2>Select a Subject</h2>
-					</header>
-					<div class="highlights">
-						<!--Selectable categories-->
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_agri.html'">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Agriculture</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_english.html'">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>English</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_history.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>History</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_buddhism.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Buddhism</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_civics.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Civics</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_christianity.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Christianity</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_homescience.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Home Science</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_science.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Science</h3>
-								</header>
-							</div>
-						</section>
-						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_sinhala.html';">
-								<header>
-									<img src="./images/audiobook-icon-66.png" width="50%"/>
-									<h3>Sinhala</h3>
-								</header>
-							</div>
-						</section>
 
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="magazines.html">Magazines</a></li>
+			<li><a href="past_papers.html">Past Papers</a></li>
+		</ul>
+	</nav>
+
+	<!-- Highlights -->
+	<section class="wrapper">
+		<div class="inner">
+			<header class="special">
+				<h2>Select a Subject</h2>
+			</header>
+			<div class="highlights">
+				<!--Selectable categories-->
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_agri.html'">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Agriculture</h3>
+						</header>
 					</div>
-				</div>
-            </section>
-            
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="content">
-						<section>
-							<h4>About Us</h4>
-							<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora over the years has earned much recognition in the Rotaract movement,
-							bagging multiple local, as well as international awards, and doing projects with high quality,
-							sustainability and continuity.</p>
-						</section>
-						<section>
-							<h4>Reach Us</h4>
-							<ul class="alt">
-								<li>
-									<strong>Post</strong>
-									<br/>
-									Rotaract Club of University of Moratuwa,<br>
-									University of Moratuwa,<br>
-									Bandaranayake Mawatha,<br>
-									Moratuwa. <br> 10400
-								</li>
-								<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_english.html'">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>English</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_history.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>History</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;"
+						onclick="window.location='past_papers_buddhism.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Buddhism</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_civics.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Civics</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;"
+						onclick="window.location='past_papers_christianity.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Christianity</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;"
+						onclick="window.location='past_papers_homescience.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Home Science</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_science.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Science</h3>
+						</header>
+					</div>
+				</section>
+				<section>
+					<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_sinhala.html';">
+						<header>
+							<img src="./images/audiobook-icon-66.png" width="50%" />
+							<h3>Sinhala</h3>
+						</header>
+					</div>
+				</section>
+
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="content">
+				<section>
+					<h4>About Us</h4>
+					<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora
+						over the years has earned much recognition in the Rotaract movement,
+						bagging multiple local, as well as international awards, and doing projects with high quality,
+						sustainability and continuity.</p>
+				</section>
+				<section>
+					<h4>Reach Us</h4>
+					<ul class="alt">
+						<li>
+							<strong>Post</strong>
+							<br />
+							Rotaract Club of University of Moratuwa,<br>
+							University of Moratuwa,<br>
+							Bandaranayake Mawatha,<br>
+							Moratuwa. <br> 10400
+						</li>
+						<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
 								<li><a href="#">Felis enim feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li>-->
-							</ul>
-						</section>
-						<section>
-							<h4>Follow Us</h4>
-							<ul class="plain">
-								<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="https://www.facebook.com/rotaractmora/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="https://www.instagram.com/rotaractmora/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="copyright">
-						<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
-						&copy; RotaractMora 2020
-					</div>
-				</div>
-			</footer>
+					</ul>
+				</section>
+				<section>
+					<h4>Follow Us</h4>
+					<ul class="plain">
+						<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
+						</li>
+						<li><a href="https://www.facebook.com/rotaractmora/"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li><a href="https://www.instagram.com/rotaractmora/"><i
+									class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+						<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i
+									class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
+					</ul>
+				</section>
+			</div>
+			<div class="copyright">
+				<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
+				&copy; RotaractMora 2020
+			</div>
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
