--- a/magazines.html
+++ b/magazines.html
@@ -38,6 +38,7 @@
 	<!-- Nav -->
 	<nav id="menu">
 		<ul class="links">
+			<li><a href="index.html">Home</a></li>
 			<li><a href="magazines.html">Magazines</a></li>
 			<li><a href="past_papers.html">Past Papers</a></li>
 		</ul>
