--- a/magazines.html
+++ b/magazines.html
@@ -41,6 +41,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="magazines.html">Magazines</a></li>
 			<li><a href="past_papers.html">Past Papers</a></li>
+			<li><a href="team.html">Team</a></li>
 		</ul>
 	</nav>
 
