--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="magazines.html">Magazines</a></li>
 			<li><a href="past_papers.html">Past Papers</a></li>
+			<li><a href="team.html">Team</a></li>
 		</ul>
 	</nav>
 
 	<!-- Banner -->
 	<section id="banner">
-
 		<div class="inner">
 			<img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"style="max-width: 100%; height: auto;" />
 		</div>
