--- a/team.html
+++ b/team.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
+    <link rel="icon" href="./images/logosrota/New folder (4)//Colour logo tab_icon.png">
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -46,7 +47,8 @@
 
     <!-- Heading -->
     <div id="heading">
-        <img src="./images/logosrota/New folder (4)/New folder/logo transperant.png" style="max-width: 25%; height: auto; padding-top: 1.0%" />
+        <img src="./images/logosrota/New folder (4)/New folder/logo transperant.png"
+            style="max-width: 25%; height: auto; padding-top: 1.0%" />
         <h1>Team</h1>
     </div>
 
