--- a/team.html
+++ b/team.html
@@ -66,172 +66,172 @@
                     <li>Rtr. Meelan Bandara</li>
 
 
-                    <li>Rtr.U.R.B.M.Ariyadasa</li>
+                    <li>Rtr. U.R.B.M.Ariyadasa</li>
 
 
-                    <li>Rtr.Liyanage Tharindu Nirmal Wickremasinghe</li>
+                    <li>Rtr. Liyanage Tharindu Nirmal Wickremasinghe</li>
 
 
-                    <li>Rtr.Ekanayakage Gayani Nishadika</li>
+                    <li>Rtr. Ekanayakage Gayani Nishadika</li>
 
 
-                    <li>Rtr.J.H Eranga Malindi</li>
+                    <li>Rtr. J.H Eranga Malindi</li>
 
 
-                    <li>Rtr.Tharushika Liyanapathirana</li>
+                    <li>Rtr. Tharushika Liyanapathirana</li>
 
 
-                    <li>Rtr.RIDMI SAMEERA THILAKARATHNA</li>
+                    <li>Rtr. Ridmi Sameera Thilakarathna</li>
 
 
-                    <li>Rtr.Sanduni Wathsala Karunarathna</li>
+                    <li>Rtr. Sanduni Wathsala Karunarathna</li>
 
 
-                    <li>Rtr.Gimsara Kulathunga Rathnayaka Pathirana</li>
+                    <li>Rtr. Gimsara Kulathunga Rathnayaka Pathirana</li>
 
 
-                    <li>Rtr.D.R.D.Dinukshi</li>
+                    <li>Rtr. D.R.D.Dinukshi</li>
 
 
-                    <li>Rtr.Athauda Achchillage Ransi Salika</li>
+                    <li>Rtr. Athauda Achchillage Ransi Salika</li>
 
 
-                    <li>Rtr.Samarakoon Singappuli Arachchige Malindu Gimhan</li>
+                    <li>Rtr. Samarakoon Singappuli Arachchige Malindu Gimhan</li>
 
 
-                    <li>Rtr.A.A.D.C.D Amarasinghe</li>
+                    <li>Rtr. A.A.D.C.D Amarasinghe</li>
 
 
-                    <li>Rtr.Sahan Sulochana Hettiarachchi</li>
+                    <li>Rtr. Sahan Sulochana Hettiarachchi</li>
 
 
-                    <li>Rtr.H.M.H.T.Munasinghe</li>
+                    <li>Rtr. H.M.H.T.Munasinghe</li>
 
 
-                    <li>Rtr.D.M.Pravindhya Harshani Pussepitiya</li>
+                    <li>Rtr. D.M.Pravindhya Harshani Pussepitiya</li>
 
 
                     <li>Rtr. Prarthana Gamage</li>
 
 
-                    <li>Rtr.Pamal Rojitha Nanayakkara</li>
+                    <li>Rtr. Pamal Rojitha Nanayakkara</li>
 
 
-                    <li>Rtr.L.R. Vishmini Navoda Rathnakumara</li>
+                    <li>Rtr. L.R. Vishmini Navoda Rathnakumara</li>
 
 
-                    <li>Rtr.Hewa Paththinige Nimesh Buwenaka Ariyarathne</li>
+                    <li>Rtr. Hewa Paththinige Nimesh Buwenaka Ariyarathne</li>
 
 
-                    <li>Rtr.U.A.balasooriya</li>
+                    <li>Rtr. U.A.balasooriya</li>
 
 
-                    <li>Rtr.Dinithi Navodya</li>
+                    <li>Rtr. Dinithi Navodya</li>
 
 
-                    <li>Rtr.P.M. Nuwan Sriyantha Bandara</li>
+                    <li>Rtr. P.M. Nuwan Sriyantha Bandara</li>
 
 
-                    <li>Rtr.W.W.M.N.T.Wickramasingha</li>
+                    <li>Rtr. W.W.M.N.T.Wickramasingha</li>
 
 
-                    <li>Rtr.Olupothage Shayinie Ivani de Silva</li>
+                    <li>Rtr. Olupothage Shayinie Ivani de Silva</li>
 
 
-                    <li>Rtr.Nushan Vitharana</li>
+                    <li>Rtr. Nushan Vitharana</li>
 
 
-                    <li>Rtr.Aseka warnakulasooriya</li>
+                    <li>Rtr. Aseka warnakulasooriya</li>
 
 
-                    <li>Rtr.A.U.P.H.Athukorala</li>
+                    <li>Rtr. A.U.P.H.Athukorala</li>
 
 
-                    <li>Rtr.Dushan Dissanayake</li>
+                    <li>Rtr. Dushan Dissanayake</li>
 
 
-                    <li>Rtr.Dakshina Ranmal</li>
+                    <li>Rtr. Dakshina Ranmal</li>
 
 
-                    <li>Rtr.Himali wijekoon</li>
+                    <li>Rtr. Himali wijekoon</li>
 
 
-                    <li>RtrAnuradhi De Silva</li>
+                    <li>Rtr. Anuradhi De Silva</li>
 
 
-                    <li>Rtr.Neha Ambegoda</li>
+                    <li>Rtr. Neha Ambegoda</li>
 
 
-                    <li>Rtr.T.M.Piyumi nisansala thennakoon</li>
+                    <li>Rtr. T.M.Piyumi nisansala thennakoon</li>
 
 
-                    <li>Rtr.Kasuni Ranushika Ranatunga Gomes</li>
+                    <li>Rtr. Kasuni Ranushika Ranatunga Gomes</li>
 
 
-                    <li>Rtr.K.L.D. Dulshi Tharuka Liyanage.</li>
+                    <li>Rtr. K.L.D. Dulshi Tharuka Liyanage.</li>
 
 
-                    <li>Rtr.Ramodya Lakrandi</li>
+                    <li>Rtr. Ramodya Lakrandi</li>
 
 
-                    <li>Rtr.Dasun Madhawa Premathilaka</li>
+                    <li>Rtr. Dasun Madhawa Premathilaka</li>
 
 
-                    <li>Rtr.S.Bimsara Malith Somarathna</li>
+                    <li>Rtr. S.Bimsara Malith Somarathna</li>
 
 
-                    <li>Rtr.H.M.S Sanjana Artigala</li>
+                    <li>Rtr. H.M.S Sanjana Artigala</li>
 
 
-                    <li>Rtr.R.M.O.Gangangana</li>
+                    <li>Rtr. R.M.O.Gangangana</li>
 
 
-                    <li>Rtr.Tharani Karunathilake</li>
+                    <li>Rtr. Tharani Karunathilake</li>
 
 
-                    <li>Rtr Lakshitha Lahiru Perera</li>
+                    <li>Rtr. Lakshitha Lahiru Perera</li>
 
 
-                    <li>Rtr Chandika Maduvantha</li>
+                    <li>Rtr. Chandika Maduvantha</li>
 
 
-                    <li>Rtr Gayathrika Gaweshini</li>
+                    <li>Rtr. Gayathrika Gaweshini</li>
 
 
-                    <li>Rtr Arudselvam Uthayamalini</li>
+                    <li>Rtr. Arudselvam Uthayamalini</li>
 
 
-                    <li>Rtr Karthiga Sivapiragasam</li>
+                    <li>Rtr. Karthiga Sivapiragasam</li>
 
 
-                    <li>Rtr Dakshana Vijayanathan</li>
+                    <li>Rtr. Dakshana Vijayanathan</li>
 
 
-                    <li>Rtr Luxshika Uthayakumar</li>
+                    <li>Rtr. Luxshika Uthayakumar</li>
 
 
-                    <li>Rtr .B.L.L.U. Liyanage</li>
+                    <li>Rtr. B.L.L.U. Liyanage</li>
 
 
-                    <li>Rtr.Sajani Senadheera</li>
+                    <li>Rtr. Sajani Senadheera</li>
 
 
-                    <li>Rtr.Jayodha Dissanayaka</li>
+                    <li>Rtr. Jayodha Dissanayaka</li>
 
 
-                    <li>Rtr.Madhushika Munasinghe</li>
+                    <li>Rtr. Madhushika Munasinghe</li>
 
 
-                    <li>Rtr.Ravindu Hiroshan</li>
+                    <li>Rtr. Ravindu Hiroshan</li>
 
 
-                    <li>Rtr Nirasha Wimalasooriya</li>
+                    <li>Rtr. Nirasha Wimalasooriya</li>
 
 
-                    <li>Rtr Isuri illeperuma</li>
+                    <li>Rtr. Isuri illeperuma</li>
 
 
-                    <li>Rtr.Pasan de silva</li>
+                    <li>Rtr. Pasan de silva</li>
 
 
                     <li>Rtr. Dilshan Pramudith Bandara</li>
@@ -243,7 +243,7 @@
                     <li>Rtr. Dulmi Kathriachchi</li>
 
 
-                    <li>Rtr Dulinda Perera</li>
+                    <li>Rtr. Dulinda Perera</li>
 
 
                     <li>Rtr. Chathumi Thumbovila</li>
@@ -258,52 +258,52 @@
                     <li>Rtr. Sandali Liyanagoonawardena</li>
 
 
-                    <li>Rtr Ramith Hettiarachchi</li>
+                    <li>Rtr. Ramith Hettiarachchi</li>
 
 
-                    <li>Rtr D.M.P.S. Dissanayake</li>
+                    <li>Rtr. D.M.P.S. Dissanayake</li>
 
 
-                    <li>Rtr L.D.H.Gimhani</li>
+                    <li>Rtr. L.D.H.Gimhani</li>
 
 
-                    <li>Rtr B.R.W.M.D.Thoradeniya</li>
+                    <li>Rtr. B.R.W.M.D.Thoradeniya</li>
 
 
-                    <li>Rtr P.G.M.S.Gunarathne</li>
+                    <li>Rtr. P.G.M.S.Gunarathne</li>
 
 
-                    <li>Rtr R.A.D.J.N.Ranasinghe</li>
+                    <li>Rtr. R.A.D.J.N.Ranasinghe</li>
 
 
-                    <li>Rtr J.M.P.M.Jayawardane</li>
+                    <li>Rtr. J.M.P.M.Jayawardane</li>
 
 
-                    <li>Rtr P.M.P.B.Uyangoda</li>
+                    <li>Rtr. P.M.P.B.Uyangoda</li>
 
 
-                    <li>Rtr S.M.U.I.Senadhipathi</li>
+                    <li>Rtr. S.M.U.I.Senadhipathi</li>
 
 
-                    <li>Rtr Tharindu Samarakoon</li>
+                    <li>Rtr. Tharindu Samarakoon</li>
 
 
-                    <li>Rtr Ramith Hettiarachchi</li>
+                    <li>Rtr. Ramith Hettiarachchi</li>
 
 
-                    <li>Rtr Nimana Perera</li>
+                    <li>Rtr. Nimana Perera</li>
 
 
-                    <li>Rtr Ranul Navojith</li>
+                    <li>Rtr. Ranul Navojith</li>
 
 
-                    <li>Rtr Rukshan Senanayaka</li>
+                    <li>Rtr. Rukshan Senanayaka</li>
 
 
-                    <li>Rtr Bhanuka Uyanage</li>
+                    <li>Rtr. Bhanuka Uyanage</li>
 
 
-                    <li>Rtr Naveen Hedallaarachchi</li>
+                    <li>Rtr. Naveen Hedalla Arachchi</li>
 
 
                     <li>Chamali Dewmini Thanthiriwattha</li>
