--- a/team.html
+++ b/team.html
@@ -306,13 +306,13 @@
                     <li>Rtr. Naveen Hedalla Arachchi</li>
 
 
-                    <li>Chamali Dewmini Thanthiriwattha</li>
+                    <li>Miss. Chamali Dewmini Thanthiriwattha</li>
 
 
                     <li>Rtr. Chamika Erandi Wickramarathne</li>
 
 
-                    <li>Oshadi Jayathilaka</li>
+                    <li>Miss. Oshadi Jayathilaka</li>
             </div>
 
         </div>
