--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
             <div class="content">
                 <header>
                     <div>
-                        <h2>Rotaractors</h2>
+                        <h2>Our Team</h2>
                     </div>
 
                 </header>
